Add Android package name to app.json configuration
- Set package identifier to com.hamsexpo.schemedetails for Android builds

--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
       "bundleIdentifier": "com.hamsexpo.scheme-details"
     },
     "android": {
+      "package": "com.hamsexpo.schemedetails",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
